# cpp-money

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  mk
.github/workflows/: ci.yml
examples/: cart_demo.cpp  shopping_cart.cpp  shopping_cart.hpp
include/money/: money.hpp
src/: money.cpp
tests/: main_unit.cpp  money_tests.cpp
